--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dompurify": "^3.0.9",
     "mysql": "^2.18.1",
     "next": "^14.1.3",
+    "plotly": "^1.0.6",
+    "plotly.js": "^2.30.0",
+    "plotly.js-basic-dist": "^2.30.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
